# OOP_course_work_2

./: .coverage  README.md  pyproject.toml
src/: utills.py
src/api/: hh.py
src/file_processing/: abc_saver.py  exel_saver.py  json_saver.py
src/ui/: ui.py
src/vacancy_processing/: abc_vacancy_worker.py  vacancy.py
tests/: conftest.py  test_api.py  test_vacancy.py
