[tool.poetry]
name = "oop-course-work-2"
version = "0.1.0"
description = ""
authors = ["Michail Fedyaev <drovosekov1910@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"


[tool.poetry.group.linters.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
